# zlp

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  Dockerfile  README.md  tags  treeDir.txt
apps/: CMakeLists.txt  README.md
apps/main_driver/: CMakeLists.txt
apps/main_driver/include/: main_utils.hpp
apps/main_driver/src/: CMakeCache.txt  CMakeLists.txt  input1.zlp  main.cpp
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  zpl.cbp
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/apps/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/apps/main_driver/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/apps/main_driver/src/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/backend/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/backend/zlpcodegen/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/frontend/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/frontend/azlpparser/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/frontend/common/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/frontend/parsers/: Makefile  cmake_install.cmake
build-zlp-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/compilation/src/frontend/parsers/acodeparser/: Makefile  cmake_install.cmake
compilation/include/: README.md
compilation/include/backend/zlpcodegen/: README.md  chain_model_defs.hpp  compiler.hpp  generic_translator_impl.hpp  interface_translator_impl.hpp  translator.hpp  translator_defs.hpp
compilation/include/frontend/azlpparser/: README.md  code_section_parser.hpp  data_section_parser.hpp  data_section_parser_utilities.hpp  instruction_parser.hpp  lexer.hpp  parser.hpp  parser_defs.hpp
compilation/include/frontend/common/: common.hpp  debug.hpp  extension_defs.hpp  immediate_value.hpp  instruction.hpp  instruction_envirnoment.hpp  logger.hpp  operand.hpp  type_defs.hpp  utility.hpp
compilation/include/frontend/czlpparser/: README.md
compilation/src/: CMakeLists.txt
compilation/src/backend/: CMakeLists.txt
compilation/src/backend/zlpcodegen/: CMakeLists.txt  chain_model_defs.hpp  code_generator.cpp  code_generator.hpp  code_translator.cpp  code_translator.hpp  compilation_pipeline.cpp  compilation_pipeline.hpp  compilation_pipeline_controller.hpp  compilation_unit.cpp  compilation_unit.hpp  compiler.cpp  compiler.hpp  datatranslator.cpp  datatranslator.h  generic_binary_writer.cpp  generic_binary_writer.hpp  generic_translator_impl.cpp  generic_translator_impl.cpp.autosave  generic_translator_impl.hpp  instructiontranslator.cpp  instructiontranslator.h  interface_binary_writer.cpp  interface_binary_writer.hpp  interface_translator.hpp  linker.cpp  linker.h  symboltable.cpp  symboltable.hpp  translator.cpp  translator.hpp  translator_defs.hpp
compilation/src/frontend/: CMakeLists.txt
compilation/src/frontend/azlpparser/: CMakeLists.txt  code_section_parser.cpp  code_section_parser.hpp  data_section_parser.cpp  data_section_parser_utilities.cpp  instruction_parser.cpp  lexer.cpp  lexer.hpp  main_section_parser.cpp  parser.cpp  parser.hpp  stack_section_parser.cpp  stack_section_parser.hpp  stack_section_parser_utilities.cpp  stack_section_parser_utilities.hpp
compilation/src/frontend/common/: CMakeLists.txt  array.hpp  common.hpp  debug.hpp  extension_defs.hpp  function.hpp  generic_value.cpp  generic_value.h  immediate_value.hpp  instruction.hpp  instruction_envirnoment.cpp  label.hpp  lexer_defs.hpp  logger.cpp  logger.hpp  operand.hpp  parser_defs.hpp  type_defs.hpp  utility.cpp  utility.hpp  variable.cpp  variable.hpp
compilation/src/frontend/parsers/: CMakeLists.txt
compilation/src/frontend/parsers/acodeparser/: CMakeLists.txt  code_section_parser.cpp  code_section_parser.hpp  instruction_parser.cpp  instruction_parser.hpp
compilation/src/frontend/parsers/adataparser/: CMakeLists.txt  data_section_parser.cpp  data_section_parser.hpp  data_section_parser_utilities.cpp  data_section_parser_utilities.hpp
compilation/src/frontend/parsers/amainparser/: CMakeLists.txt  main_section_parser.hpp
compilation/src/frontend/parsers/astackparser/: CMakeLists.txt  stack_section_parser.cpp  stack_section_parser.hpp  stack_section_parser_utilities.cpp  stack_section_parser_utilities.hpp
data/: README.md  input1.zpl  input1.zpl.zobj  input2.zpl  input2.zpl.zobj  input2.zpl.zobj.ascii_bin
data/zasm_test_inputs/: input1.zpl  input1.zpl.zobj
docs/: README.md
ide/build-ide-Desktop-Debug/: Makefile  ide  moc_predefs.h  moc_sourcetextedit.cpp  qrc_icons.cpp  ui_mainwindow.h  ui_sourcetextedit.h
ide/build-ide-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/: CMakeCache.txt
ide/build-ide-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/ide_autogen/EWIEGA46WW/: moc_mainwindow.cpp
ide/ide/: CMakeLists.txt  ide.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sourcetextedit.h  sourcetextedit.ui
ide_deprecated/build-ide-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
ide_deprecated/build-ide-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_sourcetextedit.h
ide_deprecated/build-ide-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_sourcetextedit.cpp  qrc_icons.cpp
ide_deprecated/ide/: icons.qrc  ide.pro  ide.pro.user.48e8c69.4.10-pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sourcetextedit.cpp
runtime/include/vm/: vm_config.hpp
runtime/src/vm/: vm.hpp
scripts/: README.md
tests/: README.md
(+6 files in other folders)
